# epgpt

./: .gitattributes  .gitignore  Local database.session.sql  Makefile  README.md  ci.ts  dagger_helpers.ts  docker-compose.yaml  doppler.yaml  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  inner-docker-compose.yaml  postCreateCommands.sh  postStartCommands.sh
0_common/: requirements.txt
1_attachment_proto/: Makefile
1_backend/: Dockerfile  Makefile  pyproject.toml
1_backend/config/: common.py
1_backend/src/: app.py  attachment_processor.sh  model.py  prompt.txt  response_spec.py  startup.sh  subquestion_prompt.txt  utils.py  variables.py
1_demo_frontend/: main.py
1_frontend/: .eslintrc.cjs  Dockerfile  Makefile  docker-compose.yaml  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
2_database/: Corpus.csv  Makefile  schema.prisma
2_svc_vectordb/: Dockerfile  Makefile  ci.mts  conftest.py  pyproject.toml
2_svc_vectordb/lfs/test/faiss-index/: index.faiss  index.pkl
2_svc_vectordb/requirements/: common.txt  dev.txt
2_svc_vectordb/src/: app.py  variables.py
2_svc_vectordb/test/: test_app.py
2_svc_vectordb_proto/: Makefile  dagger.ts
3_conversation_index/: Dockerfile  Makefile
3_conversation_index_proto/: Makefile
3_index_builder/: Dockerfile  Makefile
3_model/: Dockerfile  Makefile
3_model_proto/: Makefile
3_query_engine/: dagger.ts
4_gpu_gateway/src/: Dockerfile  envoy.yaml.template  pyproject.toml  script.py  startup.sh
(+285 files in other folders)
