[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src src/generated"

[tool.black]
line-length = 110
exclude = "src/gen_deps"

[tool.ruff]
line-length = 110
exclude = ["src/gen_deps"]