[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svc_vectordb"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src src/generated"

[tool.black]
line-length = 110
exclude = "src/generated"

[tool.ruff]
line-length = 110
exclude = ["src/generated"]