[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idso2305llms-app-gpugateway"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.black]
line-length = 110
exclude = "generated"

[tool.ruff]
line-length = 110
exclude = ["generated"]